# mjs_backend_design

./: .env  .gitignore  README.md  docker-compose.yml  mjs_firmware.ino  mjs_lmic.h  package.json  protocol.h
nginx-config/: default.conf.template
public/: index.html
src/: App.vue  main.js
src/components/: BundleTable.vue  Map.vue  MeasurementTable.vue
src/graphql/: bundle.graphql  measurement.graphql
src/graphql/fragments/: bundle.graphql  measurement.graphql
src/graphql/subscription/: bundle.graphql  measurement.graphql
src/views/: Main.vue
ttn-kafka-converter/: app.py  config.env  requirements.txt  start
ttn-kafka-decoder/: app.py  config.env  requirements.txt  start
ttn-kafka-producer/: app.py  requirements.txt  start
ttn-redis-converter/: app.py  requirements.txt  start
ttn-redis-decoder/: Dockerfile  app.py  config.env  consys.py  db.py  pyproject.toml  requirements.txt  start
ttn-redis-producer/: Dockerfile  app.py  requirements.txt  start
