[tool.poetry]
name = "ttn-redis-decoder"
version = "0.1.0"
description = ""
authors = ["Matthijs Kooijman <matthijs@stdin.nl>"]
license = "CC0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
redis = "^5.0.1"
cbor2 = "^5.6.0"
pony = "^0.7.17"
psycopg2-binary = "^2.9.9"
iso8601 = "^2.1.0"
requests = "^2.31.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
